--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>SPA FRONT END</title>
     <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
-		<link rel="stylesheet" href="./css/reset.css" media="all">
-		<link rel="stylesheet" href="./css/main.css" media="all">
-		<link rel="stylesheet" href="./css/modal.css" media="all">
+		<link rel="stylesheet" href="/css/reset.css" media="all">
+		<link rel="stylesheet" href="/css/main.css" media="all">
+		<link rel="stylesheet" href="/css/modal.css" media="all">
 	</head>
 <body>
     <h1>wallet connect</h1>
@@ -15,5 +15,6 @@
     <button id="check" onclick="check()">check</button>
     <div id="status">not connect</div>
 </body>
-<script src="js/main.js" type="application/javascript"></script>
+<script src="/js/router.js" type="application/javascript"></script>
+<script src="/js/main.js" type="application/javascript"></script>
 </html>
