--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>SPA FRONT END</title>
-    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
 		<link rel="stylesheet" href="/css/reset.css" media="all">
 		<link rel="stylesheet" href="/css/main.css" media="all">
 		<link rel="stylesheet" href="/css/modal.css" media="all">
@@ -12,9 +11,9 @@
     <h1>wallet connect</h1>
     <button id="connectButton">connect</button>
     <button id="disconnectButton">disconnect</button>
-    <button id="check" onclick="check()">check</button>
+    <button id="checkButton">check</button>
     <div id="status">not connect</div>
 </body>
-<script src="/js/router.js" type="application/javascript"></script>
-<script src="/js/main.js" type="application/javascript"></script>
+<script src="/js/router.js" type="module"></script>
+<script src="/js/main.js" type="module"></script>
 </html>
