--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       <p>
         <a href="/creators">creators</a>
         <a href="/tokens">tokens</a>
+        <a href="/assets">assets</a>
         <a href="/admins">admins</a>
       </p>
     </section>
