--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section class="headerArea">
-      <h1>SPA FRONT END</h1>
+      <h1 id="headerTitle">SPA FRONT END</h1>
       <p>
         <a href="/creators">creators</a>
         <a href="/tokens">tokens</a>
