--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head id="pageHeader">
     <meta charset="UTF-8" />
-    <title id="pageTitle">SPA FRONT END</title>
+    <title id="pageTitle">now loading...</title>
     <link rel="stylesheet" href="/css/reset.css" media="all" />
     <link rel="stylesheet" href="/css/main.css" media="all" />
     <link rel="stylesheet" href="/css/modal.css" media="all" />
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="headerArea">
-      <h2 id="headerTitle">SPA FRONT END </h2>
+      <h2 id="headerTitle">now loading... </h2>
       <p class="headerMenu">
         <a href="/" class="home">home</a>
         <a href="/creators">creators</a>
@@ -32,7 +32,7 @@
           <div id="closemodal" class="modal-header">
             <p><i class="fa-solid fa-rectangle-xmark"></i> close</p>
           </div>
-          <p id="modalcontent">SPA FRONT END</p>
+          <p id="modalcontent">now loading...</p>
           <div id="powerdby" class="modal-footer">
             <p>
               <a class="pwu" href="/permaweb" target="_blank">ParmaWebUploader</a>
