--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
           <p id="modalcontent">now loading...</p>
           <div id="powerdby" class="modal-footer">
             <p>
-              <a class="pwu" href="/permaweb" target="_blank">ParmaWebUploader</a>
+              <a class="pwu" href="/permaweb" target="_blank">permaWebUploader</a>
               powed by <a href="https://bon-soleil.com" target="_blank">bonsoleil</a></p>
           </div>
         </div>
