--- a/public/modelviewer/pc.html
+++ b/public/modelviewer/pc.html
@@ -2,7 +2,7 @@
   <header>
     <script
       type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
+      src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"
     ></script>
     <meta charset="utf-8" />
     <style>
