--- a/public/modelviewer/index.html
+++ b/public/modelviewer/index.html
@@ -42,13 +42,8 @@
         );
       }
 
-      if (isMobile()) {
-        window.location.href =
-          "/modelviewer/smp.html?model-view-src=" + inputURL.toString();
-      } else {
-        window.location.href =
-          "/modelviewer/pc.html?model-view-src=" + inputURL.toString();
-      }
+      window.location.href =
+        "https://goodsun.github.io/modelviewer/?src=" + inputURL.toString();
     </script>
   </body>
 </html>
