--- a/public/modelviewer/index.html
+++ b/public/modelviewer/index.html
@@ -43,7 +43,7 @@
       }
 
       window.location.href =
-        "https://goodsun.github.io/modelviewer/?src=" + inputURL.toString();
+        "https://3d.bon-soleil.com/?src=" + inputURL.toString();
     </script>
   </body>
 </html>
