--- a/src/cacheinfo.html
+++ b/src/cacheinfo.html
@@ -158,6 +158,6 @@
       </div>
     </div>
 
-    <script type="module" src="/src/cacheinfo.ts"></script>
+    <script src="/js/cacheinfo.bundle.js"></script>
   </body>
 </html>
